--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ p {
 	position: relative;
 	margin: 0;
 	padding: 15px;
-	background: rgba(255, 255, 255);
+	background: WHITE;
 	color: #000;
 	font-size: 18px;
 	font-weight: 600;
