--- a/category-desktop-support-utilities.css
+++ b/category-desktop-support-utilities.css
@@ -186,7 +186,7 @@ p {
 	position: relative;
 	margin: 0;
 	padding: 12px;
-	background: rgba(255, 255, 255);
+	background: WHITE;
 	color: #000;
 	font-size: 20px;
 	font-weight: 600;
