updated my rgb colors on my style sheets

--- a/style.css
+++ b/style.css
@@ -624,7 +624,7 @@ img.logo{
 	position: relative;
 	margin: 0;
 	padding: 14px;
-	background: rgba(255, 255, 255);
+	background: white;
 	color: #000;
 	font-size: 17px;
 	font-weight: 600;
