--- a/category-mobile-tech-support.css
+++ b/category-mobile-tech-support.css
@@ -523,7 +523,7 @@ img.logo{
     position: relative;
     margin: 0;
     padding: 13px;
-    background: rgba(255, 255, 255);
+    background: white;
     color: #000;
     font-size: 18px;
     font-weight: 450;
