--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ p {
 }
 .sec1
 {
+	padding: 100px 0;
 	background: #000;
 }
 .headerText
@@ -248,6 +249,7 @@ p {
 
 {
 	font-size: 2.5rem;
+	margin-bottom: 20px;
 }
 .placeBox
 {
@@ -688,10 +690,13 @@ img.logo{
     padding-right: 1rem;
     padding-left: 1rem;
     }
-
+	.sec1
+	{
+		padding: 20px 0;
+	}
 	.headerText h2 {
     font-size: 2rem;
-
+	padding-top: 50px;
     }
 	.blog {
     padding: 20px 0;
