--- a/style.css
+++ b/style.css
@@ -177,7 +177,8 @@ p {
 	width: 100%;
 	height: 100vh;
 	background: url(images/banner1.jpg);
-	background-position: center;
+	background-size: cover;
+
 	margin-bottom: 0;
 }
 .banner:before,
@@ -411,8 +412,8 @@ p.modal-h
 {
 	position: relative;
 	background: url(images/1_9wHrewC1Dyf2Au_qEqwWcg.jpeg);
+	background-size: cover;
 
-	background-position: center;
 	height: 100vh;
 }
 
@@ -483,7 +484,8 @@ p.modal-h
 	position: relative;
 	padding: 100px 0;
 	background: url(images/wallpapers-for-programmers_5499915.jpg);
-	background-position: center;
+	background-size: cover;
+
 	min-height: 100vh;
 }
 span#moreq.display{
@@ -974,7 +976,8 @@ img.img-modal
 	width: 100%;
 	height: 100vh;
 	background: url(images/banner1480p.jpg);
-	background-position: center;
+	background-size: cover;
+
 	margin-bottom: 0;
 }
 	 	 .placeBox .content h3 span
