--- a/style.css
+++ b/style.css
@@ -619,6 +619,7 @@ img.logo{
 @media (max-width: 992px)
 
 {
+
 	.placeBox .content h3
 {
 	position: relative;
@@ -736,6 +737,7 @@ img.logo{
     height: auto;
     padding: 80px 0;
     }
+
 }
 
 
@@ -962,6 +964,11 @@ img.img-modal
 
 @media (min-width: 200px) and (max-width: 767px)
  {
+	 .cpryt {
+  
+    font-size: 1.1rem;
+}
+
 	 .banner
 {
 
@@ -1130,6 +1137,9 @@ top: 174px;
     font-size: 15px;
     top: 126px;
 }
-
+.cpryt {
+  
+      FONT-SIZE: 1REM;
+}
 
 }
