--- a/category-desktop-support-os-drivers.css
+++ b/category-desktop-support-os-drivers.css
@@ -576,6 +576,10 @@ img.logo{
 }
 @media (max-width: 992px)
 {
+		 	 .cpryt {
+  
+    font-size: 1.2rem;
+}
 	svg{
 	    width: 18px;
 }
@@ -974,6 +978,10 @@ VERTICAL-ALIGN: middle;
 }
 @media (min-width: 200px) and (max-width: 767px)
  {
+	 	 	 .cpryt {
+  
+    font-size: 1.1rem;
+}
 	 .contentBox p {
     font-size: 1.1rem;
 }
@@ -1134,5 +1142,9 @@ p.modal-h {
 }
 svg{
 	    width: 15px;
+}
+	 	 .cpryt {
+  
+    font-size: 1rem;
 }
 }
