--- a/lets-connect-my-social-medias.css
+++ b/lets-connect-my-social-medias.css
@@ -566,6 +566,10 @@ img.logo{
 }
 @media (max-width: 992px)
 {
+		 	 .cpryt {
+  
+    font-size: 1.2rem;
+}
 	span.logoname
 {
 	font-size:1.1rem;
@@ -947,6 +951,10 @@ img.img-modal
 }
 @media (min-width: 200px) and (max-width: 767px)
  {
+	 	 .cpryt {
+  
+    font-size: 1.1rem;
+}
 	 .contentBox p {
     color: #fff;
     font-size: 1.1rem;
@@ -1109,5 +1117,9 @@ p
 .contentBox p {
     color: #fff;
     font-size: 1rem;
+}
+.cpryt {
+  
+      FONT-SIZE: 1REM;
 }
 }
