--- a/specialize-web-developers-html-learn-hub-dashboard.css
+++ b/specialize-web-developers-html-learn-hub-dashboard.css
@@ -564,6 +564,10 @@ i.fa.fa-youtube-play
 
 @media (max-width: 992px)
 {
+		 	 .cpryt {
+  
+    font-size: 1.2rem;
+}
 		span.logoname
 {
 	font-size:1.1rem;
@@ -1085,7 +1089,10 @@ p {
 @media (max-width: 767px)
 
 {
-	
+		 	 .cpryt {
+  
+    font-size: 1.1rem;
+}
 	.headerText h2 {
     font-size: 1.5rem;
     padding-top: 50px;
@@ -1105,4 +1112,10 @@ p {
     color: #fff;
     font-size: 1rem;
     }
+}
+@media (max-width: 481px){
+	 	 .cpryt {
+  
+    font-size: 1rem;
+}
 }
