--- a/category-desktop-support-utilities.css
+++ b/category-desktop-support-utilities.css
@@ -516,6 +516,10 @@ img.logo{
 @media (max-width: 992px)
 
 {
+		 	 .cpryt {
+  
+    font-size: 1.2rem;
+}
 	span.logoname
 {
 	font-size:1.1rem;
@@ -860,6 +864,10 @@ img.img-modal
 @media (min-width: 200px) and (max-width: 767px)
  {
 	 
+	 	 	 .cpryt {
+  
+    font-size: 1.1rem;
+}
 	 .placeBox .content h3 span
 {
 	font-size: 15px;
@@ -1017,6 +1025,9 @@ top: 112px;
     font-size: 18px;
     top: 72px;
 }
-
+	 	 .cpryt {
+  
+    font-size: 1rem;
+}
 
 }
