--- a/category-desktop-support-utility-tools.css
+++ b/category-desktop-support-utility-tools.css
@@ -581,6 +581,10 @@ img.logo{
 }
 @media (max-width: 992px)
 {
+		 	 .cpryt {
+  
+    font-size: 1.2rem;
+}
 	svg{
 	    width: 18px;
 }
@@ -981,6 +985,10 @@ VERTICAL-ALIGN: middle;
 }
 @media (min-width: 200px) and (max-width: 767px)
  {
+	 	 	 .cpryt {
+  
+    font-size: 1.1rem;
+}
 	 svg{
 	    width: 17px;
 }
@@ -1135,5 +1143,9 @@ p.modal-h {
 }
 svg{
 	    width: 15px;
+}
+	 	 .cpryt {
+  
+    font-size: 1rem;
 }
 }
