--- a/category-mobile-tech-support-utility-tools.css
+++ b/category-mobile-tech-support-utility-tools.css
@@ -586,6 +586,10 @@ img.logo{
 }
 @media (max-width: 992px)
 {
+		 	 .cpryt {
+  
+    font-size: 1.2rem;
+}
 		svg{
 	    width: 18px;
 }
@@ -987,6 +991,10 @@ VERTICAL-ALIGN: middle;
 }
 @media (min-width: 200px) and (max-width: 767px)
  {
+	 	 	 .cpryt {
+  
+    font-size: 1.1rem;
+}
 	 	 svg{
 	    width: 17px;
 }
@@ -1141,5 +1149,9 @@ p.modal-h {
 }
 svg{
 	    width: 15px;
+}
+	 	 .cpryt {
+  
+    font-size: 1rem;
 }
 }
