online learning page updated

--- a/specialize-web-developers-html-learn-hub-dashboard.css
+++ b/specialize-web-developers-html-learn-hub-dashboard.css
@@ -78,8 +78,9 @@ p {
     top: 0;
     width: 100%;
     height: 100vh;
-    background: url(images/banner1.jpg);
+    background: url(images/developers-blog.jpg );
     background-size: cover;
+	background-position: center;
     margin-bottom: 0;
 }
 .banner:before,
@@ -519,8 +520,9 @@ div#home.jumbotron.jumbotron-fluid.height100p.banner{
     top: 0;
     width: 100%;
     height: 100vh;
-    background: url(images/banner1.jpg);
+    background: url(images/html-tutorial-beginners-header.jpg);
     background-size: cover;
+	background-position: center;
     margin-bottom: 0;
 }
 
@@ -583,6 +585,7 @@ i.fa.fa-youtube-play
     height: 100vh;
     background: url(images/banner1.jpg);
     background-size: cover;
+	background-position: center;
     margin-bottom: 0;
 }
 	.placeBox .content h3
