--- a/webdevelopers-online-coder-html.css
+++ b/webdevelopers-online-coder-html.css
@@ -351,6 +351,7 @@ p.modal-h
 	position: relative;
 	background: url(images/1_9wHrewC1Dyf2Au_qEqwWcg.jpeg);
 	background-size: cover;
+	background-position: center;
 	height: 100vh;
 }
 
@@ -422,6 +423,7 @@ p.modal-h
 	padding: 100px 0;
 	background: url(images/wallpapers-for-programmers_5499915.jpg);
 	background-size: cover;
+	background-position: center;
 	min-height: 100vh;
 }
 span#moreq.display{
