--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ p {
 	top: 0;
 	width: 100%;
 	height: 100vh;
-	background: url(images/banner1.jpg);
+	background: url(images/MLseries-1-evilgeniux.png);
 	background-size: cover;
 	background-position: center;
 	margin-bottom: 0;
@@ -969,18 +969,6 @@ img.img-modal
     font-size: 1.1rem;
 }
 
-	 .banner
-{
-
-	position: relative;
-	top: 0;
-	width: 100%;
-	height: 100vh;
-	background: url(images/banner1480p.jpg);
-	background-size: cover;
-	background-position: center;
-	margin-bottom: 0;
-}
 	 	 .placeBox .content h3 span
 {
 	font-size: 15px;
