--- a/specialize-web-developers-html-learn-hub-dashboard.css
+++ b/specialize-web-developers-html-learn-hub-dashboard.css
@@ -520,7 +520,7 @@ div#home.jumbotron.jumbotron-fluid.height100p.banner{
     top: 0;
     width: 100%;
     height: 100vh;
-    background: url(images/html-tutorial-beginners-header.jpg);
+    background: url(images/WEBDEVELOPER-EVILGENIUX-WALLPAPER.jpg);
     background-size: cover;
 	background-position: center;
     margin-bottom: 0;
@@ -1100,6 +1100,18 @@ p {
     font-size: 1.5rem;
     padding-top: 50px;
     margin-bottom: 0px;
+}
+
+div#home.jumbotron.jumbotron-fluid.height100p.banner{
+	
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: url(images/html-tutorial-beginners-header.jpg);
+    background-size: cover;
+	background-position: center;
+    margin-bottom: 0;
 }
 }
 @media (max-width: 576px)
