--- a/lets-connect-my-social-medias.css
+++ b/lets-connect-my-social-medias.css
@@ -517,7 +517,18 @@ background: #000;
     padding: 15px;
     overflow: overlay;
 }
-
+.col-sm-4 {
+ 
+    display: inline-block;
+	transform
+	  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.col-sm-4:hover{
+	
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+}
 @media (min-width: 992px)
 {
 .navbar-expand-lg .navbar-nav .nav-link {
