--- a/style-specialize-mobile-web-developers.css
+++ b/style-specialize-mobile-web-developers.css
@@ -516,6 +516,17 @@ padding: 50px 0 0;
 .blogpost .content {
     padding: 15px;
     overflow: overlay;
+}'.col-sm-4 {
+ 
+    display: inline-block;
+	transform
+	  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.col-sm-4:hover{
+	
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
 }
 div#home.jumbotron.jumbotron-fluid.height100p.banner{
 	
