--- a/style.css
+++ b/style.css
@@ -571,6 +571,14 @@ padding: 50px 0 0;
 .col-sm-4 {
  
     display: inline-block;
+	transform
+	  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.col-sm-4:hover{
+	
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 @media (min-width: 992px)
