--- a/category-desktop-support-os-windows-activators.css
+++ b/category-desktop-support-os-windows-activators.css
@@ -526,6 +526,11 @@ img.logo{
 @media (max-width: 992px)
 
 {
+		.col-sm-4:hover{
+	
+  -webkit-transform: unset;
+  transform: unset;
+}
 		 	 .cpryt {
   
     font-size: 1.2rem;
