--- a/lets-connect-my-social-medias.css
+++ b/lets-connect-my-social-medias.css
@@ -224,7 +224,7 @@ span#moreq.display{
 	padding: 10px;
 	background: rgba(255, 255, 255,255);
 	color: #000;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: 450;
 	width: 100%;
 	text-align: center;
@@ -577,6 +577,12 @@ img.logo{
 }
 @media (max-width: 992px)
 {
+		.col-sm-4:hover{
+	
+  -webkit-transform: unset;
+  transform: unset;
+}
+
 		 	 .cpryt {
   
     font-size: 1.2rem;
@@ -606,11 +612,15 @@ img.logo{
 	padding: 10px;
 	background: rgba(255, 255, 255,255);
 	color: #000;
-	font-size: 20px;
+	font-size: 17px;
 	font-weight: 450;
 	width: 100%;
 	text-align: center;
 
+}
+.placeBox .content h3 span {
+    font-size: 15px;
+  
 }
 .placeBox .imgBx img
 {
@@ -983,8 +993,8 @@ img.img-modal
 	
 }
 .placeBox .content h3 span {
-    font-size: 15px;
-    font-weight: 600;
+    font-size: 14px;
+  
 }
 	 .h2, h2 {
     font-size: 1.5rem;
@@ -1110,6 +1120,14 @@ p {
 
 @media (max-width: 481px)
 {
+	.placeBox .content h3
+{
+
+	font-size: 15px;
+
+
+
+}
 p
 {
 	color: #fff;
